# dwb_rsc_planner

./: README.md  dwb_rsc_local_planner_params.yaml
dwb_rsc_critics/: CMakeLists.txt  dwb_rsc_critics.xml  package.xml
dwb_rsc_critics/include/dwb_rsc_critics/: alignment_util.h  base_obstacle.h  goal_align.h  goal_dist.h  map_grid.h  obstacle_footprint.h  oscillation.h  path_align.h  path_dist.h  prefer_forward.h  rotate_to_goal.h  twirling.h
dwb_rsc_critics/src/: alignment_util.cpp  base_obstacle.cpp  goal_align.cpp  goal_dist.cpp  map_grid.cpp  obstacle_footprint.cpp  oscillation.cpp  path_align.cpp  path_dist.cpp  prefer_forward.cpp  rotate_to_goal.cpp  twirling.cpp
dwb_rsc_local_planner/: CMakeLists.txt  dwb_rsc_local_planner.xml  package.xml
dwb_rsc_local_planner/include/dwb_rsc_local_planner/: backwards_compatibility.h  debug_dwb_rsc_local_planner.h  dwb_rsc_local_planner.h  goal_checker.h  illegal_trajectory_tracker.h  publisher.h  trajectory_critic.h  trajectory_generator.h  trajectory_utils.h
dwb_rsc_local_planner/launch/: plan_node.launch
dwb_rsc_local_planner/src/: backwards_compatibility.cpp  debug_dwb_rsc_local_planner.cpp  dwb_rsc_local_planner.cpp  illegal_trajectory_tracker.cpp  planner_node.cpp  publisher.cpp  trajectory_utils.cpp
dwb_rsc_local_planner/test/: utils_test.cpp
dwb_rsc_msgs/: CMakeLists.txt  package.xml
dwb_rsc_plugins/: CMakeLists.txt  dwb_rsc_plugins.xml  package.xml
dwb_rsc_plugins/cfg/: KinematicParams.cfg
dwb_rsc_plugins/include/dwb_rsc_plugins/: kinematic_parameters.h  limited_accel_generator.h  one_d_velocity_iterator.h  simple_goal_checker.h  standard_traj_generator.h  stopped_goal_checker.h  velocity_iterator.h  xy_theta_iterator.h
dwb_rsc_plugins/src/: kinematic_parameters.cpp  limited_accel_generator.cpp  simple_goal_checker.cpp  standard_traj_generator.cpp  stopped_goal_checker.cpp  xy_theta_iterator.cpp
dwb_rsc_plugins/test/: goal_checker.cpp  goal_checker.launch  twist_gen.cpp  twist_gen.launch  velocity_iterator_test.cpp
mir_dwb_rsc_critics/: CMakeLists.txt  mir_dwb_rsc_critics.xml  package.xml
mir_dwb_rsc_critics/include/mir_dwb_rsc_critics/: path_angle.h  path_dist_pruned.h  path_progress.h
mir_dwb_rsc_critics/nodes/: plot_dwb_scores.py  print_dwb_scores.py
mir_dwb_rsc_critics/src/: path_angle.cpp  path_dist_pruned.cpp  path_progress.cpp
