<?xml version="1.0"?>
<package format="2">
  <name>dwb_rsc_critics</name>
  <version>0.0.0</version>
  <description>The dwb_rsc_critics package</description>

  <maintainer email="phuc@todo.todo">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>costmap_queue</build_depend>
  <build_depend>dwb_rsc_local_planner</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_2d_msgs</build_depend>
  <build_depend>nav_2d_utils</build_depend>
  <build_depend>nav_core2</build_depend>
  <build_depend>nav_grid_iterators</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>costmap_queue</build_export_depend>
  <build_export_depend>dwb_rsc_local_planner</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_2d_msgs</build_export_depend>
  <build_export_depend>nav_2d_utils</build_export_depend>
  <build_export_depend>nav_core2</build_export_depend>
  <build_export_depend>nav_grid_iterators</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>costmap_queue</exec_depend>
  <exec_depend>dwb_rsc_local_planner</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_2d_msgs</exec_depend>
  <exec_depend>nav_2d_utils</exec_depend>
  <exec_depend>nav_core2</exec_depend>
  <exec_depend>nav_grid_iterators</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>roslint</test_depend>

  <export>
    <dwb_rsc_local_planner plugin="${prefix}/dwb_rsc_critics.xml"/>
  </export>
</package>
