<?xml version="1.0"?>
<package format="2">
  <name>dwb_rsc_msgs</name>
  <version>0.0.0</version>
  <description>The dwb_rsc_msgs package</description>

  <maintainer email="txphuc02071999@gmai.com">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_2d_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>nav_2d_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_2d_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
