<?xml version="1.0"?>
<package format="2">
  <name>dwb_rsc_plugins</name>
  <version>0.0.0</version>
  <description>The dwb_rsc_plugins package</description>

  <maintainer email="phuc@todo.todo">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>dwb_rsc_local_planner</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nav_2d_msgs</build_depend>
  <build_depend>nav_2d_utils</build_depend>
  <build_depend>nav_core2</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>dwb_rsc_local_planner</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>nav_2d_msgs</build_export_depend>
  <build_export_depend>nav_2d_utils</build_export_depend>
  <build_export_depend>nav_core2</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>dwb_rsc_local_planner</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>nav_2d_msgs</exec_depend>
  <exec_depend>nav_2d_utils</exec_depend>
  <exec_depend>nav_core2</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <dwb_rsc_local_planner plugin="${prefix}/dwb_rsc_plugins.xml"/>
  </export>
</package>
